use-cases/vault-agent-kubernetes/example-ingress-nginx_with clusterip service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: vaultagent.demo
    http:
      paths:
      - path: /
        backend:
          serviceName: vault-agent-example-svc
